--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Tubbbo – WebGL experiment by @luruke | luruke.com" />
     <meta property="og:description" content="Tubbbo – WebGL experiment by @luruke | luruke.com" />
-    <meta property="og:url" content="https://www.epic.net/en/" />
+    <meta property="og:url" content="https://luruke.github.io/tubbbo/" />
 
-    <meta property="og:image" content="https://URL" />
-    <meta property="og:image:secure_url" content="https://URL" />
+    <meta property="og:image" content="https://luruke.github.io/tubbbo/social.jpg" />
+    <meta property="og:image:secure_url" content="https://luruke.github.io/tubbbo/social.jpg" />
     <meta property="og:image:width" content="1024" />
     <meta property="og:image:height" content="468" />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:image" content="https://URL" />
+    <meta name="twitter:image" content="https://luruke.github.io/tubbbo/social.jpg" />
     <meta name="twitter:description" content="Tubbbo – WebGL experiment by @luruke | luruke.com" />
     <meta name="twitter:title" content="Tubbbo – WebGL experiment by @luruke | luruke.com" />
     <meta name="twitter:site" content="@luruke" />
